set(module_name display)
if(NOT cnstream_build_integrated_lib)
  include_directories(${PROJECT_SOURCE_DIR}/modules/${module_name}/include)
  file(GLOB srcs ${PROJECT_SOURCE_DIR}/modules/${module_name}/src/*.cpp)
  set(libname "cns-display")
  add_library(${libname} SHARED ${srcs})
  target_link_libraries(${libname} ${SOURCE_LINKER_LIBS})
  set_target_properties(${libname} PROPERTIES VERSION ${CNSTREAM_TARGET_VERSION} SOVERSION ${CNSTREAM_TARGET_SOVERSION})
endif()
