set(module_name cpu_encode)
if(NOT cnstream_build_integrated_lib)
  include_directories(${PROJECT_SOURCE_DIR}/modules/cpu_encoder/include)
  include_directories(${PROJECT_SOURCE_DIR}/include)
  file(GLOB srcs ${PROJECT_SOURCE_DIR}/modules/cpu_encoder/src/*.cpp)
  set(libname "cns-encoder")
  add_library(${libname} SHARED ${srcs})
  set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/)
  target_link_libraries(${libname} cnstream opencv_core opencv_highgui opencv_imgproc)
  set_target_properties(${libname} PROPERTIES VERSION ${CNSTREAM_TARGET_VERSION} SOVERSION ${CNSTREAM_TARGET_SOVERSION})
endif()
