set(module_name inference)
if(NOT cnstream_build_integrated_lib)
  include_directories(${PROJECT_SOURCE_DIR}/modules/${module_name}/include)
  include_directories(${PROJECT_SOURCE_DIR}/modules/memcopier/include)
  include_directories(${PROJECT_SOURCE_DIR}/include)
  file(GLOB srcs ${PROJECT_SOURCE_DIR}/modules/${module_name}/src/*.cpp)
  set(libname "cns-${module_name}")
  add_library(${libname} SHARED ${srcs})
  target_link_libraries(${libname} cnstream-toolkit cnstream)
  set_target_properties(${libname} PROPERTIES VERSION ${CNSTREAM_TARGET_VERSION} SOVERSION ${CNSTREAM_TARGET_SOVERSION})
endif()
