set(module_name source)
if(NOT cnstream_build_integrated_lib)
  include_directories(${PROJECT_SOURCE_DIR}/include)
  include_directories(${PROJECT_SOURCE_DIR}/modules/decode/include)
  include_directories(${PROJECT_SOURCE_DIR}/modules/${module_name}/include)
  if(HAVE_FFMPEG)
    include_directories($ENV{FFMPEG_PATH}/include)
  endif()
  file(GLOB srcs ${PROJECT_SOURCE_DIR}/modules/${module_name}/src/*.cpp)
  set(libname "cns-source")
  add_library(${libname} SHARED ${srcs})
  target_link_libraries(${libname} ${SOURCE_LINKER_LIBS})
  set_target_properties(${libname} PROPERTIES VERSION ${CNSTREAM_TARGET_VERSION} SOVERSION ${CNSTREAM_TARGET_SOVERSION})
endif()