set(module_name track)
if(NOT cnstream_build_integrated_lib)
  include_directories(${PROJECT_SOURCE_DIR}/modules/track/include)
  include_directories(${PROJECT_SOURCE_DIR}/include)
  file(GLOB srcs ${PROJECT_SOURCE_DIR}/modules/track/src/*.cpp)
  set(libname "cns-track")
  add_library(${libname} SHARED ${srcs})
  set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib/)
  target_link_libraries(${libname} cnstream-toolkit cnstream)
  set_target_properties(${libname} PROPERTIES VERSION ${CNSTREAM_TARGET_VERSION} SOVERSION ${CNSTREAM_TARGET_SOVERSION})
endif()
