include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/settings.cmake)
include_directories("${Example_INCLUDE_DIRS}")
aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} srcs)
set(SRC detection.cpp)
get_filename_component(name "${SRC}" NAME_WE)
message("target :  ${name}")
add_executable(${name} ${srcs})
if(cnstream_build_integrated_lib)
    target_link_libraries(${name} cnstream ${Example_LINKER_3RDPARTY_LIBS} ${Example_LINKER_TOOLKIT_LIBS} ${FFMPEG_LIBS})
else()
    target_link_libraries(${name} cns-source ${Example_LINKER_LIBS} ${FFMPEG_LIBS})
endif()
